<resources>
    <string name="app_name">Student Info</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">LogOut</string>
    <string name="slogan">Committed To Excellence In Education</string>
    <string name="logo">School Management</string>
    <string name="Issue">Enter your Issue Below</string>
    <string name="std_list_index_1">STID20001</string>
    <string name="std_list_index_2">STID20002</string>
    <string name="std_list_index_3">STID20003</string>
    <string name="std_list_name_1">Avishka Perera</string>
    <string name="std_list_name_2">Dilshan Wijerathna</string>
    <string name="std_list_name_3">Keshan Fernando</string>
    <string name="new_students_list">New Students List</string>
    <string name="index_number">Index Number</string>
    <string name="student_name">Student\'s Name</string>
    <string name="view_button">View</string>
    <string name="student_info">Student Info</string>
    <string name="std_full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="parent_or_guardian">Parent / Guardian</string>
    <string name="parent_or_guardian_name">Parent / Guardian Name</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="admission_date">Admission Date</string>
    <string name="add_password">Add Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit_button">Submit</string>
    <string name="reject_button">Reject</string>
    <string name="pw_required">password is required.</string>
    <string name="pw_pattern">Password should be consist of Aa-Zz letters, 0 - 9 Numbers.</string>
    <string name="pw_not_match">password not match.</string>
    <string name="pw_length">password length must be 8.</string>
    <string name="pw_confirm">Please confirm password.</string>
    <string name="user_name_length">user name length can not be greater than 8 characters.</string>
    <string name="user_name_required">User name is required.</string>
    <string name="success_message">user name, password sent to student successfully.</string>
    <string name="reject_pressed">Do you want to reject the student?</string>
    <string name="reject_success">student rejected.</string>
</resources>