<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_admin_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/admin_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00103D"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="false"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="-30dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/nav3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="120dp"
                android:layout_marginBottom="14dp"
                android:text="@string/student_info"
                android:textColor="#FFFEFE"
                android:textSize="22sp" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="-25dp"
                android:layout_marginBottom="-10dp"
                android:src="@drawable/profile" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alignmentMode="alignMargins"
                android:columnCount="1"
                android:columnOrderPreserved="false"
                android:rowCount="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="100dp"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="800dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_marginTop="-10dp"
                    android:background="#ECD689"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginTop="10dp"
                        android:background="#ECD689"
                        android:orientation="vertical"
                        android:padding="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="170dp"
                            android:layout_height="23dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/index_number"
                            android:textAlignment="textEnd"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="23dp"
                            android:layout_marginStart="200dp"
                            android:layout_marginTop="-23dp"
                            android:text="@string/std_list_index_1"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:padding="2dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginTop="10dp"
                        android:background="#ECD689"
                        android:orientation="vertical"
                        android:padding="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="170dp"
                            android:layout_height="23dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/std_full_name"
                            android:textAlignment="textEnd"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="23dp"
                            android:layout_marginStart="200dp"
                            android:layout_marginTop="-23dp"
                            android:text="@string/std_list_name_1"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:padding="2dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginTop="10dp"
                        android:background="#ECD689"
                        android:orientation="vertical"
                        android:padding="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="170dp"
                            android:layout_height="23dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/date_of_birth"
                            android:textAlignment="textEnd"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="23dp"
                            android:layout_marginStart="200dp"
                            android:layout_marginTop="-23dp"
                            android:text="2004.08.05"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:padding="2dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginTop="10dp"
                        android:background="#ECD689"
                        android:orientation="vertical"
                        android:padding="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="170dp"
                            android:layout_height="23dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/parent_or_guardian"
                            android:textAlignment="textEnd"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="23dp"
                            android:layout_marginStart="200dp"
                            android:layout_marginTop="-23dp"
                            android:text="Father"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:padding="2dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginTop="10dp"
                        android:background="#ECD689"
                        android:orientation="vertical"
                        android:padding="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="170dp"
                            android:layout_height="23dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/parent_or_guardian_name"
                            android:textAlignment="textEnd"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="23dp"
                            android:layout_marginStart="200dp"
                            android:layout_marginTop="-23dp"
                            android:text="Namal Perera"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:padding="2dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginTop="10dp"
                        android:background="#ECD689"
                        android:orientation="vertical"
                        android:padding="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="170dp"
                            android:layout_height="23dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/permanent_address"
                            android:textAlignment="textEnd"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="23dp"
                            android:layout_marginStart="200dp"
                            android:layout_marginTop="-23dp"
                            android:text="301/10, 1st Lane, Kottawa"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:padding="2dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginTop="10dp"
                        android:background="#ECD689"
                        android:orientation="vertical"
                        android:padding="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="170dp"
                            android:layout_height="23dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/admission_date"
                            android:textAlignment="textEnd"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="23dp"
                            android:layout_marginStart="200dp"
                            android:layout_marginTop="-23dp"
                            android:text="2020.08.05"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:padding="2dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"
                        android:background="#ECD689"
                        android:orientation="vertical"
                        android:padding="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <EditText
                            android:id="@+id/et-Username"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="6dp"
                            android:background="@drawable/edit"
                            android:drawableStart="@drawable/ic_person"
                            android:drawablePadding="10dp"
                            android:hint="Add Username"
                            android:inputType="textLongMessage"
                            android:padding="10dp"
                            android:textColorHint="#780000" />

                        <EditText
                            android:id="@+id/et-Password"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/edit"
                            android:drawableStart="@drawable/ic_key"
                            android:drawablePadding="10dp"
                            android:hint="@string/add_password"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:textColorHint="#780000" />

                        <EditText
                            android:id="@+id/et-Password-confirm"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/edit"
                            android:drawableStart="@drawable/ic_key"
                            android:drawablePadding="10dp"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:textColorHint="#780000" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="2dp"
                        android:background="#ECD689"
                        android:orientation="horizontal"
                        android:padding="16dp"
                        android:weightSum="100"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <Button
                            android:id="@+id/btnSubmit"
                            android:layout_width="fill_parent"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_weight="50"
                            android:background="#165318"
                            android:text="@string/submit_button"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btnReject"
                            android:layout_width="fill_parent"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_weight="50"
                            android:background="#E60707"
                            android:text="@string/reject_button"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </GridLayout>
        </ScrollView>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>